// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chat :api > :exports > 对外导出清单保持稳定 > exports 1`] = `
[
  "ACTIVITY_EVENT_DETAIL_KEY",
  "ACTIVITY_REGISTERED_EVENT",
  "AGUIAdapter",
  "AGUIError",
  "AGUIEventType",
  "AGUIMessageSchema",
  "ActivityDeltaEventSchema",
  "ActivityManagerImpl",
  "ActivityRenderer",
  "ActivitySnapshotEventSchema",
  "Attachments",
  "Chat",
  "ChatAction",
  "ChatActionbar",
  "ChatContent",
  "ChatEngineEventType",
  "ChatEventBus",
  "ChatInput",
  "ChatItem",
  "ChatList",
  "ChatLoading",
  "ChatMarkdown",
  "ChatMessage",
  "ChatReasoning",
  "ChatSearchContent",
  "ChatSender",
  "ChatSuggestionContent",
  "ChatThinking",
  "Chatbot",
  "ContextSchema",
  "CustomEventSchema",
  "EventSchemas",
  "FunctionCallSchema",
  "HistoryMessageSchema",
  "MarkdownEngine",
  "MessagesSnapshotEventSchema",
  "RawEventSchema",
  "RoleSchema",
  "RunAgentInputSchema",
  "RunErrorEventSchema",
  "RunFinishedEventSchema",
  "RunStartedEventSchema",
  "StateDeltaEventSchema",
  "StateManagerImpl",
  "StateSchema",
  "StateSnapshotEventSchema",
  "StepFinishedEventSchema",
  "StepStartedEventSchema",
  "TOOLCALL_EVENT_DETAIL_KEY",
  "TOOLCALL_REGISTERED_EVENT",
  "TextMessageChunkEventSchema",
  "TextMessageContentEventSchema",
  "TextMessageEndEventSchema",
  "TextMessageStartEventSchema",
  "ThinkingEndEventSchema",
  "ThinkingStartEventSchema",
  "ThinkingTextMessageContentEventSchema",
  "ThinkingTextMessageEndEventSchema",
  "ThinkingTextMessageStartEventSchema",
  "ToolCallArgsEventSchema",
  "ToolCallChunkEventSchema",
  "ToolCallEndEventSchema",
  "ToolCallRenderer",
  "ToolCallResultEventSchema",
  "ToolCallSchema",
  "ToolCallStartEventSchema",
  "ToolSchema",
  "activityManager",
  "activityRegistry",
  "agentToolcallRegistry",
  "applyJsonPatch",
  "createEventBus",
  "findTargetElement",
  "getMessageContentForCopy",
  "isAIMessage",
  "isActivityContent",
  "isActivityEvent",
  "isAttachmentContent",
  "isImageContent",
  "isMarkdownContent",
  "isNonInteractive",
  "isNonInteractiveConfig",
  "isReasoningContent",
  "isSearchContent",
  "isStateEvent",
  "isSuggestionContent",
  "isTextContent",
  "isTextMessageEvent",
  "isThinkingContent",
  "isThinkingEvent",
  "isToolCallContent",
  "isToolCallEvent",
  "isUserMessage",
  "safeParseJSON",
  "stateManager",
  "useAgentActivity",
  "useAgentState",
  "useAgentToolcall",
  "useChat",
  "withAgentStateToolcall",
  "withAgentStateToolcall1",
]
`;

exports[`chat :api > :props > ChatActionbar emits 契约 > ChatActionbar-emits 1`] = `
[
  "actions",
  "operation",
]
`;

exports[`chat :api > :props > ChatActionbar props 契约 > ChatActionbar-props 1`] = `
{
  "actionBar": {
    "default": [
      "replay",
      "copy",
      "good",
      "bad",
      "share",
    ],
    "required": false,
    "type": "Array",
  },
  "comment": {
    "default": "",
    "required": false,
    "type": "String",
  },
  "content": {
    "default": "",
    "required": false,
    "type": "String",
  },
  "disabled": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "isBad": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "isGood": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "onActions": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onOperation": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "operationBtn": {
    "default": [
      "replay",
      "copy",
      "good",
      "bad",
      "share",
    ],
    "required": false,
    "type": "Array",
  },
}
`;

exports[`chat :api > :props > ChatContent emits 契约 > ChatContent-emits 1`] = `[]`;

exports[`chat :api > :props > ChatContent props 契约 > ChatContent-props 1`] = `
{
  "content": {
    "default": "",
    "required": false,
    "type": "[String, Object]",
  },
  "markdownProps": {
    "default": {
      "engine": "cherry-markdown",
      "options": {},
    },
    "required": false,
    "type": "Object",
  },
  "role": {
    "default": undefined,
    "required": false,
    "type": "String",
  },
  "status": {
    "default": "",
    "required": false,
    "type": "String",
  },
}
`;

exports[`chat :api > :props > ChatInput emits 契约 > ChatInput-emits 1`] = `
[
  "blur",
  "focus",
  "send",
  "stop",
  "update:modelValue",
]
`;

exports[`chat :api > :props > ChatInput props 契约 > ChatInput-props 1`] = `
{
  "autofocus": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "autosize": {
    "default": {
      "maxRows": 5,
      "minRows": 1,
    },
    "required": false,
    "type": "[Boolean, Object]",
  },
  "defaultValue": {
    "default": undefined,
    "required": false,
    "type": "[String, Number]",
  },
  "disabled": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "modelValue": {
    "default": undefined,
    "required": false,
    "type": "[String, Number]",
  },
  "onBlur": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onChange": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onFocus": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onSend": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onStop": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "placeholder": {
    "default": "",
    "required": false,
    "type": "String",
  },
  "stopDisabled": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "suffixIcon": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "value": {
    "default": undefined,
    "required": false,
    "type": "[String, Number]",
  },
}
`;

exports[`chat :api > :props > ChatItem emits 契约 > ChatItem-emits 1`] = `[]`;

exports[`chat :api > :props > ChatItem props 契约 > ChatItem-props 1`] = `
{
  "actions": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "animation": {
    "default": "skeleton",
    "required": false,
    "type": "String",
  },
  "avatar": {
    "default": undefined,
    "required": false,
    "type": "[String, Object, Function]",
  },
  "content": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "datetime": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "name": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "reasoning": {
    "default": false,
    "required": false,
    "type": "[String, Object, Boolean]",
  },
  "reasoningLoading": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "role": {
    "default": undefined,
    "required": false,
    "type": "String",
  },
  "status": {
    "default": "",
    "required": false,
    "type": "String",
  },
  "textLoading": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "variant": {
    "default": "text",
    "required": false,
    "type": "String",
  },
}
`;

exports[`chat :api > :props > ChatList emits 契约 > ChatList-emits 1`] = `
[
  "clear",
  "scroll",
]
`;

exports[`chat :api > :props > ChatList props 契约 > ChatList-props 1`] = `
{
  "actionbar": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "actions": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "animation": {
    "default": "skeleton",
    "required": false,
    "type": "String",
  },
  "autoScroll": {
    "default": true,
    "required": false,
    "type": "Boolean",
  },
  "avatar": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "clearHistory": {
    "default": true,
    "required": false,
    "type": "Boolean",
  },
  "content": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "data": {
    "default": undefined,
    "required": false,
    "type": "Array",
  },
  "datetime": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "defaultScrollTo": {
    "default": "bottom",
    "required": false,
    "type": "String",
  },
  "isStreamLoad": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "layout": {
    "default": "both",
    "required": false,
    "type": "String",
  },
  "name": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onClear": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onScroll": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "reasoning": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "reverse": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "showScrollButton": {
    "default": true,
    "required": false,
    "type": "Boolean",
  },
  "textLoading": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
}
`;

exports[`chat :api > :props > ChatMessage emits 契约 > ChatMessage-emits 1`] = `[]`;

exports[`chat :api > :props > ChatMessage props 契约 > ChatMessage-props 1`] = `
{
  "allowContentSegmentCustom": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "animation": {
    "default": "circle",
    "required": false,
    "type": "String",
  },
  "avatar": {
    "default": undefined,
    "required": false,
    "type": "[String, Object, Function]",
  },
  "chatContentProps": {
    "default": undefined,
    "required": false,
    "type": "Object",
  },
  "content": {
    "default": undefined,
    "required": false,
    "type": "[Array, Function]",
  },
  "datetime": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "message": {
    "default": undefined,
    "required": false,
    "type": "Object",
  },
  "name": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "placement": {
    "default": "left",
    "required": false,
    "type": "String",
  },
  "role": {
    "default": undefined,
    "required": false,
    "type": "String",
  },
  "status": {
    "default": undefined,
    "required": false,
    "type": "String",
  },
  "variant": {
    "default": "text",
    "required": false,
    "type": "String",
  },
}
`;

exports[`chat :api > :props > ChatReasoning emits 契约 > ChatReasoning-emits 1`] = `
[
  "update:collapsed",
]
`;

exports[`chat :api > :props > ChatReasoning props 契约 > ChatReasoning-props 1`] = `
{
  "collapsePanelProps": {
    "default": {
      "destroyOnCollapse": false,
    },
    "required": false,
    "type": "Object",
  },
  "collapsed": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "defaultCollapsed": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "expandIcon": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "expandIconPlacement": {
    "default": "right",
    "required": false,
    "type": "String",
  },
  "header": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "headerRightContent": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "layout": {
    "default": "block",
    "required": false,
    "type": "String",
  },
  "modelValue": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "onExpandChange": {
    "default": "<fn>",
    "required": false,
    "type": "Function",
  },
}
`;

exports[`chat :api > :props > ChatSender emits 契约 > ChatSender-emits 1`] = `
[
  "blur",
  "fileClick",
  "fileSelect",
  "focus",
  "remove",
  "send",
  "stop",
  "update:modelValue",
]
`;

exports[`chat :api > :props > ChatSender props 契约 > ChatSender-props 1`] = `
{
  "attachmentsProps": {
    "default": {
      "items": [],
      "overflow": "scrollX",
    },
    "required": false,
    "type": "Object",
  },
  "defaultValue": {
    "default": undefined,
    "required": false,
    "type": "[String, Number]",
  },
  "disabled": {
    "default": undefined,
    "required": false,
    "type": "Boolean",
  },
  "footerPrefix": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "loading": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "modelValue": {
    "default": undefined,
    "required": false,
    "type": "[String, Number]",
  },
  "onBlur": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onChange": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onFocus": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onSend": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "onStop": {
    "default": undefined,
    "required": false,
    "type": "Function",
  },
  "placeholder": {
    "default": "",
    "required": false,
    "type": "String",
  },
  "sendBtnDisabled": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "stopDisabled": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "suffix": {
    "default": undefined,
    "required": false,
    "type": "[String, Function]",
  },
  "textareaProps": {
    "default": undefined,
    "required": false,
    "type": "Object",
  },
  "value": {
    "default": undefined,
    "required": false,
    "type": "[String, Number]",
  },
}
`;

exports[`chat :api > :props > ChatThinking emits 契约 > ChatThinking-emits 1`] = `[]`;

exports[`chat :api > :props > ChatThinking props 契约 > ChatThinking-props 1`] = `
{
  "animation": {
    "default": "moving",
    "required": false,
    "type": "String",
  },
  "collapsed": {
    "default": false,
    "required": false,
    "type": "Boolean",
  },
  "content": {
    "default": undefined,
    "required": false,
    "type": "[Object, Function]",
  },
  "layout": {
    "default": "block",
    "required": false,
    "type": "String",
  },
  "maxHeight": {
    "default": undefined,
    "required": false,
    "type": "Number",
  },
  "status": {
    "default": "pending",
    "required": false,
    "type": "String",
  },
}
`;

exports[`chat :api > :props > 全局注册名（模板中使用的标签名）保持稳定 > global-components 1`] = `
[
  "t-attachments",
  "t-chat",
  "t-chat-action",
  "t-chat-actionbar",
  "t-chat-content",
  "t-chat-input",
  "t-chat-item",
  "t-chat-list",
  "t-chat-loading",
  "t-chat-markdown",
  "t-chat-message",
  "t-chat-reasoning",
  "t-chat-search-content",
  "t-chat-sender",
  "t-chat-suggestion-content",
  "t-chat-thinking",
  "t-chatbot",
]
`;
